# ritk

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHIVE.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  OPTIMIZATION.md  README.md  SPINT_293_PLAN.md  TransformParameters.0.txt  _b64.txt  _b64_part1.txt  _build.py  _fix2.py  _fix_doc.py  _gen.py  _gen_sd.py  _gen_tests.py  _gen_tls.py  _new_func_part1.txt  _new_tests.rs  _patch_artifacts.py  _patch_filter.py  _patch_resample_test.py  _patch_seg_step2.py  _patch_segmentation.py  _patch_segmentation2.py  _script_head.b64  _sd_main.b64  _sprint28_checklist_header.txt  _t.b64  _t1.b64  _t2.b64  _t3.b64  _t4.b64  _test_hd.txt  _tls_header.txt  _tls_part1.b64  (+63 more)
crates/ritk-analyze/: Cargo.toml
crates/ritk-analyze/src/: codec.rs  lib.rs  reader.rs  tests.rs  writer.rs
crates/ritk-annotation/: Cargo.toml
crates/ritk-annotation/src/: annotation_state.rs  color.rs  error.rs  label_map.rs  label_table.rs  lib.rs  overlay.rs  tests_annotation_state.rs  tests_color.rs  tests_label_map.rs  tests_label_table.rs  tests_overlay.rs  tests_undo_redo.rs  undo_redo.rs
crates/ritk-cli/: Cargo.toml  out.vtk
crates/ritk-cli/src/: error.rs  main.rs
crates/ritk-codecs/: Cargo.toml
crates/ritk-codecs/benches/: codec_throughput.rs
crates/ritk-codecs/src/: byte_decode.rs  dimensions.rs  lib.rs  pixel_layout.rs  rle.rs  tests_byte_decode.rs  tests_byte_decode_int.rs  tests_pixel_layout.rs
crates/ritk-codecs/tests/: jpeg2000_interop.rs
crates/ritk-core/: Cargo.toml
crates/ritk-core/benches/: bspline_interpolation.rs  cpr_path.rs
crates/ritk-core/src/: geometry.rs  io_bounds.rs  lib.rs  wgpu_compat.rs
crates/ritk-core/tests/: bspline_test.rs  coordinate_mapping.proptest-regressions  coordinate_mapping.rs  image_test.rs  parity.rs  transform_test.rs
crates/ritk-dicom/: Cargo.toml
crates/ritk-dicom/src/: attribute.rs  lib.rs
crates/ritk-filter/: Cargo.toml
crates/ritk-filter/benches/: bilateral.rs  cpr_apply.rs  cpr_path.rs  euclidean_dt.rs  median.rs  separable_box.rs
crates/ritk-filter/examples/: bench_gradient_rg.rs
crates/ritk-filter/src/: anti_alias_binary.rs  bilateral.rs  bin_shrink.rs  bspline_decomposition.rs  canny_segmentation_level_set.rs  coeus_support.rs  colliding_fronts.rs  color.rs  colormap.rs  contour_extractor_2d.rs  cpr.rs  cpr_helpers.rs  discrete_gaussian.rs  discrete_gaussian_derivative.rs  displacement.rs  downsample.rs  fast_marching.rs  fractal_dimension.rs  gaussian.rs  iir.rs  inverse_displacement.rs  invert_displacement.rs  iso_contour.rs  iterative_inverse_displacement.rs  level_set_helpers.rs  lib.rs  masked_fft_correlation.rs  median.rs  native_displacement.rs  native_support.rs  noise.rs  normalized_correlation.rs  patch_based_denoising.rs  projection.rs  pyramid.rs  recursive_gaussian.rs  reinitialize_level_set.rs  resample.rs  scalar_chan_and_vese.rs  sources.rs  (+38 more)
crates/ritk-filter/tests/: fractal_dimension.rs  native_color_components.rs  native_colormap.rs  native_displacement.rs  native_edge.rs  native_frangi.rs  native_gaussian.rs  native_intensity.rs  native_pyramid.rs  native_recursive_gaussian.rs  native_resample.rs  native_warp.rs  parity.rs
crates/ritk-image/: Cargo.toml
crates/ritk-image/src/: burn_compat_row_chunks.rs  burn_compat_types.rs  coeus.rs  color.rs  grid.rs  host_extract.rs  lib.rs  metadata.rs  native.rs  test_support.rs  tests_burn_compat_grid.rs  tests_grid.rs  tests_transform.rs  transform.rs  types.rs
crates/ritk-interpolation/: Cargo.toml
crates/ritk-interpolation/benches/: bspline_interpolation.rs
crates/ritk-interpolation/src/: lib.rs  native.rs
crates/ritk-io/: Cargo.toml  build.rs
crates/ritk-io/examples/: dicom_to_nifti.rs  dump_dicom.rs  inspect_dicom.rs
crates/ritk-io/src/: dicom_io.rs  lib.rs  nifti_io.rs  png_io.rs
crates/ritk-io/tests/: dicom_security.rs
crates/ritk-jpeg/: Cargo.toml
crates/ritk-jpeg/src/: color.rs  lib.rs  reader.rs  tests.rs  writer.rs
crates/ritk-macros/: Cargo.toml
crates/ritk-macros/src/: lib.rs  mask.rs  parse.rs  prelude.rs
crates/ritk-metaimage/: Cargo.toml
crates/ritk-metaimage/src/: lib.rs  reader.rs  spatial.rs  tests.rs  writer.rs
crates/ritk-mgh/: Cargo.toml
crates/ritk-mgh/src/: binary.rs  lib.rs  reader.rs  spatial.rs  test_support.rs  types.rs  writer.rs
crates/ritk-minc/: Cargo.toml
crates/ritk-minc/src/: attrs.rs  convert.rs  hdf5_binary.rs  lib.rs  reader.rs  spatial.rs  tests_attrs.rs  tests_convert.rs  tests_spatial.rs  tests_writer.rs  writer.rs
crates/ritk-model/: Cargo.toml
crates/ritk-model/src/: error.rs  initialization.rs  interpolation.rs  lib.rs  losses.rs
crates/ritk-model/tests/: affine_test.rs  dbg_grad.rs  diffeomorphic_ssmmorph_test.rs  transmorph_test.rs
crates/ritk-nifti/: Cargo.toml
crates/ritk-nifti/src/: header.rs  lib.rs  mod.rs  reader.rs  shape.rs  spatial.rs  tests.rs  writer.rs
crates/ritk-nrrd/: Cargo.toml
crates/ritk-nrrd/src/: lib.rs  reader.rs  spatial.rs  writer.rs
crates/ritk-png/: Cargo.toml
crates/ritk-png/src/: color.rs  lib.rs  tests_color.rs  tests_lib.rs
crates/ritk-python/: Cargo.toml  README.md  pyproject.toml  requirements-test.txt
crates/ritk-python/src/: array_utils.rs  color.rs  errors.rs  filter.rs  image.rs  io.rs  lib.rs  metrics.rs  registration.rs  segmentation.rs  statistics.rs
crates/ritk-python/tests/: SITK_BLOCKED_FILTERS_REFERENCE.md  SITK_CMAKE_COVERAGE.md  SITK_CMAKE_EXCLUSIONS.md  _gen_sitk_coverage.py  _sitk_data.py  audit_sitk_performance.py  conftest.py  python_api_drift_report.py  section11_lddmm.py  sitk_input_manifest.json  (+24 more)
crates/ritk-registration/: Cargo.toml  check.txt  moved_slice.raw  moving_slice.raw
crates/ritk-registration-classical/: Cargo.toml
crates/ritk-segmentation/: Cargo.toml
crates/ritk-snap/: Cargo.toml  patches.py  rewire.py
crates/ritk-statistics/: Cargo.toml
crates/ritk-tensor-ops/: Cargo.toml
crates/ritk-tiff/: Cargo.toml
xtask/: Cargo.toml  burn_surface.allowlist
xtask/src/: datasets.rs  dependency_alignment.rs  main.rs  migration_audit.rs
(+4155 files in other folders)
