[workspace]
members = [
  "crates/ritk-vtk",
  "crates/ritk-core",
  "crates/ritk-dicom",
  "crates/ritk-codecs",
  "crates/ritk-nifti",
  "crates/ritk-nrrd",
  "crates/ritk-metaimage",
  "crates/ritk-mgh",
  "crates/ritk-analyze",
  "crates/ritk-png",
  "crates/ritk-jpeg",
  "crates/ritk-tiff",
  "crates/ritk-minc",
  "crates/ritk-io",
  "crates/ritk-model",
  "crates/ritk-registration",
  "crates/ritk-python",
  "crates/ritk-cli",
  "crates/ritk-snap",
  "xtask",
]
resolver = "2"

[workspace.dependencies]
ritk-core = { path = "crates/ritk-core" }
ritk-dicom = { path = "crates/ritk-dicom" }
ritk-codecs = { path = "crates/ritk-codecs" }
ritk-nifti = { path = "crates/ritk-nifti" }
ritk-nrrd = { path = "crates/ritk-nrrd" }
ritk-metaimage = { path = "crates/ritk-metaimage" }
ritk-mgh = { path = "crates/ritk-mgh" }
ritk-analyze = { path = "crates/ritk-analyze" }
ritk-png = { path = "crates/ritk-png" }
ritk-jpeg = { path = "crates/ritk-jpeg" }
ritk-tiff = { path = "crates/ritk-tiff" }
ritk-minc = { path = "crates/ritk-minc" }
ritk-vtk = { path = "crates/ritk-vtk" }
ritk-io = { path = "crates/ritk-io" }
ritk-model = { path = "crates/ritk-model" }
ritk-registration = { path = "crates/ritk-registration" }
gaia = { git = "https://github.com/ryancinsight/gaia.git", default-features = false }

criterion = { version = "0.5", features = ["html_reports"] }
burn = { version = "0.19", default-features = false, features = ["wgpu", "autodiff"] }
burn-ndarray = "0.19" # For CPU testing
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
dicom = { version = "0.8.0", default-features = false, features = ["pixeldata", "ndarray"] }
nifti = { version = "0.17.0", default-features = false, features = ["ndarray_volumes"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = "1.0"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# moirai: data-parallel runtime replacing rayon (default-features off avoids its
# global allocator). ndarray keeps its internal `rayon` feature.
moirai = { git = "https://github.com/ryancinsight/Moirai.git", default-features = false, features = ["parallel"] }
ndarray = { version = "0.16", features = ["rayon"] }
tempfile = "3.10" # For testing
proptest = "1.0"
walkdir = "2.4"
charls = { version = "0.4", features = ["static"] }
rustfft = "6.2"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
wgpu = { version = "0.20", default-features = false, features = ["wgsl"] }
pollster = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
image = "0.24"
jpeg2k = { version = "0.10.1", default-features = false, features = ["openjp2"] }
tiff = "0.9"
onnx-ir = "0.20.1"
openjp2 = { version = "0.6.1", default-features = false, features = ["std"] }
dicom-core = "0.8"
dicom-ul = "0.8"
dicom-pixeldata = { version = "0.8", features = ["native"] }
dicom-transfer-syntax-registry = { version = "0.8", features = ["native", "jpegxl", "charls", "openjp2"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
jpeg-decoder = "0.3"
openjpeg-sys = "1.0"
