[workspace]
members = [
  "crates/ritk-filter",
  "crates/ritk-segmentation",
  "crates/ritk-vtk",
  "crates/ritk-macros",
  "crates/ritk-core",
  "crates/ritk-dicom",
  "crates/ritk-codecs",
  "crates/ritk-nifti",
  "crates/ritk-nrrd",
  "crates/ritk-metaimage",
  "crates/ritk-mgh",
  "crates/ritk-analyze",
  "crates/ritk-png",
  "crates/ritk-jpeg",
  "crates/ritk-tiff",
  "crates/ritk-minc",
  "crates/ritk-io",
  "crates/ritk-model",
  "crates/ritk-registration",
  "crates/ritk-python",
  "crates/ritk-cli",
  "crates/ritk-snap",
  "crates/ritk-transform",
  "crates/ritk-interpolation",
  "crates/ritk-spatial",
  "crates/ritk-image",
  "crates/ritk-wgpu-compat",
  "crates/ritk-morphology",
  "crates/ritk-annotation",
  "crates/ritk-tensor-ops",
  "crates/ritk-statistics",
  "xtask",
]
resolver = "2"

[workspace.dependencies]
ritk-filter = { path = "crates/ritk-filter" }
ritk-segmentation = { path = "crates/ritk-segmentation" }
ritk-core = { path = "crates/ritk-core" }
ritk-dicom = { path = "crates/ritk-dicom" }
ritk-codecs = { path = "crates/ritk-codecs" }
ritk-nifti = { path = "crates/ritk-nifti" }
ritk-nrrd = { path = "crates/ritk-nrrd" }
ritk-metaimage = { path = "crates/ritk-metaimage" }
ritk-mgh = { path = "crates/ritk-mgh" }
ritk-analyze = { path = "crates/ritk-analyze" }
ritk-png = { path = "crates/ritk-png" }
ritk-jpeg = { path = "crates/ritk-jpeg" }
ritk-tiff = { path = "crates/ritk-tiff" }
ritk-minc = { path = "crates/ritk-minc" }
ritk-vtk = { path = "crates/ritk-vtk" }
ritk-io = { path = "crates/ritk-io" }
ritk-model = { path = "crates/ritk-model" }
ritk-registration = { path = "crates/ritk-registration" }
ritk-transform = { path = "crates/ritk-transform" }
ritk-interpolation = { path = "crates/ritk-interpolation" }
ritk-spatial = { path = "crates/ritk-spatial" }
ritk-image = { path = "crates/ritk-image" }
ritk-wgpu-compat = { path = "crates/ritk-wgpu-compat" }
ritk-morphology = { path = "crates/ritk-morphology" }
ritk-annotation = { path = "crates/ritk-annotation" }
ritk-tensor-ops = { path = "crates/ritk-tensor-ops" }
ritk-statistics = { path = "crates/ritk-statistics" }
gaia = { path = "../gaia", default-features = false }

criterion = { version = "0.5", features = ["html_reports"] }
burn = { version = "0.19", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-ndarray = "0.19" # For CPU testing
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
dicom = { version = "0.8.0", default-features = false }
moirai = { path = "../moirai/moirai", version = "0.2.0", features = ["melinoe", "no-global-alloc"] }
# Apollo FFT scratch caches use Eunomia complex values through Mnemosyne.
mnemosyne = { path = "../mnemosyne/crates/mnemosyne", version = "0.2.0", default-features = false, features = ["std_tls", "eunomia"] }
eunomia = { git = "https://github.com/ryancinsight/eunomia", default-features = false }
coeus-core = { path = "../coeus/coeus-core", version = "0.5.3" }
coeus-tensor = { path = "../coeus/coeus-tensor", version = "0.5.3" }
coeus-ops = { path = "../coeus/coeus-ops", version = "0.5.3" }
coeus-leto = { path = "../coeus/coeus-leto", version = "0.5.3" }
coeus-autograd = { path = "../coeus/coeus-autograd", version = "0.5.3" }
leto = { path = "../leto/crates/leto", version = "0.36.0" }
leto-ops = { path = "../leto/crates/leto-ops", version = "0.36.0" }
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core", version = "0.10.0" }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu", version = "0.10.0" }
apollo-fft = { path = "../apollo/crates/apollo-fft", version = "0.14.0" }
num-complex = { version = "0.4.6", features = ["bytemuck"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10" # For testing
proptest = "1.0"
walkdir = "2.4"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
wgpu = { version = "0.20", default-features = false, features = ["wgsl"] }
pollster = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
image = "0.24"
num-traits = "0.2"
tiff = "0.9"
onnx-ir = "0.20.1"

dicom-core = "0.8"
dicom-ul = "0.8"
dicom-pixeldata = { version = "0.8", features = ["native"] }
dicom-transfer-syntax-registry = { version = "0.8", features = ["native", "jpegxl"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
jpeg-decoder = "0.3"

arrayvec = "0.7"

# ── Profile overrides ────────────────────────────────────────────────────────
# Test builds keep `opt-level = 0` and emit full debug info so that
# `STATUS_STACK_BUFFER_OVERRUN` / `STATUS_ACCESS_VIOLATION` crashes (and any
# other panics) produce meaningful backtraces on Windows.  Without this,
# release-mode optimisation collapses stack frames and the signal handler
# cannot point to the offending instruction.
[profile.test]
opt-level = 0
debug = true

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/hephaestus.git"]
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core" }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }
