[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "stream"] }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
indicatif = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
