[package]
name = "ritk-analyze"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton"]
license = "MIT OR Apache-2.0"

[dependencies]
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
burn = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = { workspace = true }
