[package]
name = "ritk-analyze"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton"]
license.workspace = true

[dependencies]
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
coeus-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
