[package]
name = "ritk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ritk"
path = "src/main.rs"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-io = { path = "../ritk-io" }
ritk-registration = { path = "../ritk-registration" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
burn-ndarray = { workspace = true }
ndarray = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
burn = { workspace = true }
