[package]
name = "ritk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ritk"
path = "src/main.rs"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-interpolation = { path = "../ritk-interpolation" }
serde_json = { workspace = true }
ritk-transform = { path = "../ritk-transform" }
ritk-filter = { path = "../ritk-filter" }
ritk-segmentation = { path = "../ritk-segmentation" }
ritk-io = { path = "../ritk-io" }
ritk-registration = { path = "../ritk-registration" }
ritk-snap = { path = "../ritk-snap" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
burn-ndarray = { workspace = true }
leto = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
