[package]
name = "ritk-codecs"
version = "0.3.0"
edition = "2021"
description = "RITK-native codec implementations: JPEG, JPEG-LS, JPEG 2000, PackBits, RLE Lossless"

[dependencies]
anyhow = { workspace = true }
jpeg-decoder = { workspace = true }

[dev-dependencies]
image = { workspace = true }
proptest = { workspace = true }

criterion = { workspace = true }

[[bench]]
name = "codec_throughput"
harness = false
