[package]
name = "ritk-codecs"
version = "0.5.2"
edition = "2021"
description = "RITK-native codec implementations: JPEG, JPEG-LS, JPEG 2000, PackBits, RLE Lossless"

[dependencies]
anyhow = { workspace = true }
jpeg-decoder = { workspace = true }

[dev-dependencies]
image = { workspace = true }
proptest = { workspace = true }

criterion = { workspace = true }
tempfile = { workspace = true }
# Pure-Rust c2rust port of OpenJPEG — differential interop reference only.
openjp2 = { version = "0.6.1", default-features = false, features = ["std", "file-io"] }
jpeg2k = { version = "0.10.1", default-features = false, features = ["openjp2"] }

[[bench]]
name = "codec_throughput"
harness = false
