[package]
name = "ritk-codecs"
version = "0.5.3"
edition = "2021"
license.workspace = true
description = "RITK-native codec implementations: JPEG, JPEG-LS, JPEG 2000, PackBits, RLE Lossless"

[dependencies]
anyhow = { workspace = true }
jpeg-decoder = { workspace = true }

[dev-dependencies]
image = { workspace = true }
proptest = { workspace = true }

criterion = { workspace = true }
tempfile = { workspace = true }
# Pure-Rust c2rust port of OpenJPEG — differential interop reference only.
openjp2 = { workspace = true, default-features = false, features = ["file-io"] }

[[bench]]
name = "codec_throughput"
harness = false
