[package]
name = "ritk-core"
version = "0.9.0"
edition = "2021"

[features]
default = ["mnemosyne-alloc"]
mnemosyne-alloc = ["dep:mnemosyne"]

[dependencies]
ritk-spatial = { path = "../ritk-spatial" }
ritk-image = { path = "../ritk-image" }
ritk-morphology = { path = "../ritk-morphology" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
ritk-statistics = { path = "../ritk-statistics" }
mnemosyne = { workspace = true, optional = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }

[dev-dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
proptest = { workspace = true }
