[package]
name = "ritk-core"
version = "0.9.0"
edition = "2021"

[features]
default = ["mnemosyne-alloc"]
mnemosyne-alloc = ["dep:mnemosyne"]

[dependencies]
ritk-spatial = { path = "../ritk-spatial" }
ritk-image = { path = "../ritk-image" }
mnemosyne = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
