[package]
name = "ritk-core"
version = "0.9.0"
edition = "2021"
license.workspace = true

[features]
default = []

[dependencies]
ritk-spatial = { path = "../ritk-spatial" }
ritk-image = { path = "../ritk-image" }
ritk-morphology = { path = "../ritk-morphology" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
ritk-statistics = { path = "../ritk-statistics" }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
