[package]
name = "ritk-dicom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dicom = { workspace = true }
ritk-codecs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dicom-pixeldata = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dicom-pixeldata = { version = "0.8", default-features = false }

[dev-dependencies]
image = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
