[package]
name = "ritk-dicom"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
dicom = { workspace = true }
ritk-codecs = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dicom-pixeldata = { workspace = true, features = ["native"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dicom-pixeldata = { workspace = true }

[dev-dependencies]
image = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
