[package]
name = "ritk-filter"
version = "0.2.21"
edition = "2021"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-morphology = { path = "../ritk-morphology" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-spatial = { path = "../ritk-spatial" }
burn = { workspace = true }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
anyhow = { workspace = true }
nalgebra = { workspace = true }
rustfft = { workspace = true }
gaia = { workspace = true }
rand = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cpr_path"
harness = false

[[bench]]
name = "cpr_apply"
harness = false

[[bench]]
name = "bilateral"
harness = false
