[package]
name = "ritk-filter"
version = "0.2.60"
edition = "2021"

[features]
default = []
# Atlas migration: expose Coeus-native compute paths alongside the Burn ones.
coeus = ["dep:coeus-core", "ritk-image/coeus"]

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-morphology = { path = "../ritk-morphology" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-spatial = { path = "../ritk-spatial" }
burn = { workspace = true }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
anyhow = { workspace = true }
apollo-fft = { workspace = true }
eunomia = { workspace = true }
gaia = { workspace = true }
rand = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }
coeus-core = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cpr_path"
harness = false

[[bench]]
name = "cpr_apply"
harness = false

[[bench]]
name = "bilateral"
harness = false

[[bench]]
name = "median"
harness = false

[[bench]]
name = "separable_box"
harness = false

[[bench]]
name = "euclidean_dt"
harness = false
