[package]
name = "ritk-filter"
version = "0.2.60"
edition = "2021"
license.workspace = true

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-morphology = { path = "../ritk-morphology" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
anyhow = { workspace = true }
apollo-fft = { workspace = true }
eunomia = { workspace = true }
gaia = { workspace = true }
rand = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }
coeus-core = { workspace = true }
coeus-ops = { workspace = true }
coeus-tensor = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ritk-segmentation = { path = "../ritk-segmentation" }

[[bench]]
name = "cpr_path"
harness = false

[[bench]]
name = "cpr_apply"
harness = false

[[bench]]
name = "bilateral"
harness = false

[[bench]]
name = "median"
harness = false

[[bench]]
name = "separable_box"
harness = false

[[bench]]
name = "euclidean_dt"
harness = false
