[package]
name = "ritk-image"
version = "0.2.0"
edition = "2021"

[dependencies]
burn-ndarray = { workspace = true }
ritk-spatial = { path = "../ritk-spatial" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
burn = { workspace = true }
anyhow = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }

[features]
### Expose `test_support` helpers to downstream test crates.
## Add `ritk-image = { …, features = ["test-helpers"] }` to your `[dev-dependencies]`.
test-helpers = []

[dev-dependencies]
