[package]
name = "ritk-interpolation"
version = "0.3.0"
edition = "2021"

[features]
default = []
# Atlas migration: expose a Coeus-native trilinear path alongside the Burn one.
coeus = ["dep:coeus-core"]

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-macros = { path = "../ritk-macros" }
burn = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
coeus-core = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "bspline_interpolation"
harness = false
