[package]
name = "ritk-interpolation"
version = "0.3.0"
edition = "2021"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-macros = { path = "../ritk-macros" }
burn = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "bspline_interpolation"
harness = false
