[package]
name = "ritk-interpolation"
version = "0.3.0"
edition = "2021"
license.workspace = true

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-macros = { path = "../ritk-macros" }
burn = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
coeus-ops = { workspace = true }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "bspline_interpolation"
harness = false
