[package]
name = "ritk-io"
version = "0.1.0"
edition = "2021"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-dicom = { workspace = true }
ritk-codecs = { workspace = true }
ritk-nifti = { workspace = true }
ritk-nrrd = { workspace = true }
ritk-metaimage = { workspace = true }
ritk-mgh = { workspace = true }
ritk-analyze = { workspace = true }
ritk-vtk = { workspace = true }
ritk-jpeg = { workspace = true }
ritk-png = { workspace = true }
ritk-tiff = { workspace = true }
ritk-minc = { workspace = true }
dicom = { workspace = true }
dicom-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
burn = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
tiff = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
gaia = { workspace = true }
consus-hdf5 = { workspace = true }
consus-core = { workspace = true }
consus-compression = { workspace = true }
consus-io = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dicom-pixeldata = { workspace = true }
dicom-transfer-syntax-registry = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dicom-pixeldata = { version = "0.8", default-features = false }
dicom-transfer-syntax-registry = { version = "0.8", default-features = false }

[dev-dependencies]
burn-ndarray = { workspace = true }
openjp2 = { workspace = true, features = ["file-io"] }
openjpeg-sys = { workspace = true }
charls = { workspace = true }
tempfile = { workspace = true }
zune-jpegxl = { version = "0.4", default-features = false, features = ["std"] }
zune-core = { version = "0.4", default-features = false }

[[example]]
name = "dicom_to_nifti"
path = "examples/dicom_to_nifti.rs"
